* The BaseTemplateToolbox hook, deprecated since 1.35, was removed.
* Previously a capitalize-all-nouns class was added to the body element of
  languages where nouns must be capitalized. This class is no longer added to
  the body tag and must be provided by skins.
* The SkinTemplateOutputPageBeforeExec hook, deprecated since 1.35, was removed.
* Article::getContentObject, deprecated since 1.32, was removed.
* Article::delete(), Article::confirmDelete() and ImagePage::delete() were
  hard-deprecated. The logic responsible for building the form is being moved to
  DeleteAction, while the actual deletion logic will be moved to a separate
  service.
* WikiImporter::debugRevisionHandler, unused and for debug only, was removed.
* Content::preloadTransform was hard-deprecated since 1.37,
  use ContentTransformer::preloadTransform instead. Extensions defining
  a content model should override ContentHandler::preloadTransform.
* Content::preSaveTransform was hard-deprecated since 1.37,
  use ContentTransformer::preSaveTransform instead. Extensions defining
  a content model should override ContentHandler::preSaveTransform.
* …

=== Deprecations in 1.37 ===
* JobQueue::getWiki, deprecated in 1.33, now emits deprecation warnings.
* In AbstractBlock, the getTargetAndType() and getTarget() methods are
  hard deprecated. Instead use getTargetName() and getTargetUserIdentity()
  together with getType().
* Deprecated passing UserIdentity to
  WatchlistManager::clearAllUserNotifications() and
  WatchlistManager::clearTitleUserNotifications(). Pass Authority instead.
* Deprecated passing LinkTarget to
  WatchlistManager::clearTitleUserNotifications() and
  WatchlistManager::getTitleNotificationTimestamp(). Pass PageIdentity instead.
* Deprecated User::isWatched(), User::isTempWatched(), User::addWatch(), and
  User::removeWatch(). Use corresponding methods in WatchlistManager instead.
* Deprecated WatchAction::doWatchOrUnwatch(). Use WatchlistManager::setWatch()
  instead.